# UGR_Screen_25

./: .cproject.bak  .mxproject  .project.bak  CMakeCache.txt  CMakeLists.txt  STM32F405RGTX_FLASH.ld  UGR_Screen_25 Debug.launch  UGR_Screen_25.ioc  startup_stm32f405xx.s
Core/Inc/: GUI_Paint.h  LCD_2inch4.h  fonts.h  image.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: GUI_Paint.c  LCD_2inch4.c  font24.c  fontBIG.c  fontBIG2.c  image.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  system_stm32f4xx.c
Debug/: UGR_Screen_25.list  UGR_Screen_25.map  makefile  objects.list
Debug/Core/Src/: GUI_Paint.cyclo  GUI_Paint.d  GUI_Paint.su  LCD_2inch4.cyclo  LCD_2inch4.d  LCD_2inch4.su  fontBIG.d  fontBIG2.d  main.cyclo  main.d  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.d  stm32f4xx_hal_msp.su  stm32f4xx_it.cyclo  stm32f4xx_it.d  stm32f4xx_it.su  subdir.mk  system_stm32f4xx.d
Debug/Core/Startup/: subdir.mk
Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.d  stm32f4xx_hal_can.d  stm32f4xx_hal_can.su  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.cyclo  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ex.su  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_hcd.cyclo  stm32f4xx_hal_hcd.d  stm32f4xx_hal_hcd.su  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_rcc.d  stm32f4xx_hal_rcc_ex.d  stm32f4xx_hal_tim.d  stm32f4xx_hal_tim_ex.d  stm32f4xx_ll_usb.d  subdir.mk
